--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -1,11 +1,7 @@
 {{#partial "content"}}
     <h1>Welcome to the Hero Squad App</h1>
-    <p>Add a new Squad:</p>
-
-    <form action="/squads/new", method="post">
-        <label for="content">Hero Description</label>
-        <input id="content" name="content" type="text">
-        <button type="submit" class="btn btn-default">Add Squad</button>
+    <form action ="/squads/new" >
+        <button class="btn btn-primary text-light">Add a new Squad</button>
     </form>
 {{/partial}}
 
