Displays Hero list from the details that the user keyed in

--- a/src/main/resources/templates/herosuccess.hbs
+++ b/src/main/resources/templates/herosuccess.hbs
@@ -2,7 +2,7 @@
 
     <h1>Success!</h1>
 
-    Your Hero details has been saved.<br>
+    Your Hero details have been saved.<br>
     <form action = "/receivedheroes">
         <button class="btn btn-dark text-light">Check your new Heroes</button>
 
