Work on functionalities

--- a/src/main/resources/templates/heroform-input.hbs
+++ b/src/main/resources/templates/heroform-input.hbs
@@ -4,19 +4,19 @@
     <form action="/herosform/new" method="post">
 
         <div class="form-group">
-            <label for="name">Your name</label>
+            <label for="name">Hero's name</label>
             <input id="name" name="name" class="form-control" type="text" placeholder="Enter Name" required>
         </div>
         <div class="form-group">
-            <label for="age">Your Age</label>
+            <label for="age">Hero's Age</label>
             <input id="age" name="age" class="form-control" type="number" placeholder="Enter Age" required>
         </div>
         <div class="form-group">
-            <label for="specialPower">Your Powers</label>
+            <label for="specialPower">Hero's Powers</label>
             <input id="specialPower" name="specialPower" class="form-control" type="text" placeholder="Enter Special Powers" required>
         </div>
         <div class="form-group">
-            <label for="weakness">Your Weakness</label>
+            <label for="weakness">Hero's Weakness</label>
             <input id="weakness" name="weakness" class="form-control" type="text" placeholder="Enter Weakness" required>
         </div>
         <button type="submit" class="btn btn-success text-light">Add up!</button>
