--- a/src/main/resources/templates/herosuccess.hbs
+++ b/src/main/resources/templates/herosuccess.hbs
@@ -4,7 +4,7 @@
 
     Your Hero details have been saved.<br>
     <form action = "/receivedheroes">
-        <button class="btn btn-dark text-light">Check your new Heroes</button>
+        <button class="btn btn-success text-light">Check your new Heroes</button>
 
     </form>
 
