--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -1,7 +1,7 @@
 {{#partial "content"}}
     <h1>Welcome to the Hero Squad App</h1>
     <form action ="/squads/new" >
-        <button class="btn btn-primary text-light">Add a new Squad</button>
+        <button class="btn btn-primary text-light" id="btn-index">Add a new Squad</button>
     </form>
 {{/partial}}
 
